# ai-agent

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
ai-agent/answer-generation-agent/: answer-generation-agent.md  pyproject.toml
ai-agent/answer-generation-agent/scripts/: run_answer_generation.py
ai-agent/answer-generation-agent/src/answer_generation_agent/app/: __init__.py  entrypoint.py
ai-agent/answer-generation-agent/src/answer_generation_agent/config/: __init__.py  settings.py
ai-agent/answer-generation-agent/src/answer_generation_agent/generation/: __init__.py  (+6 more)
ai-agent/answer-generation-agent/tests/integration/: test_fixture_safety.py  test_workflow_cli.py
ai-agent/answer-generation-agent/tests/unit/: test_answer_output_builder.py  test_citation_mapping.py  test_generation_input_normalization.py  test_llm_provider_answer_generation.py  test_prompt_template_builder.py  test_schema_config.py
ai-agent/answer-verification-agent/: .env.example  answer-verification-agent.md  pyproject.toml
ai-agent/answer-verification-agent/scripts/: run_answer_verification.py
ai-agent/answer-verification-agent/src/answer_verification_agent/: workflow.py
ai-agent/answer-verification-agent/tests/integration/: test_fixture_safety.py  test_workflow_cli.py
ai-agent/answer-verification-agent/tests/unit/: test_llm_evaluator_provider.py  test_rule_based_verifier.py  test_schema_config.py  test_sentence_citation_parser.py  test_suspicious_sentence_selector.py  test_verification_input_normalization.py  test_verification_result_builder.py
ai-agent/data-ingestion-agent/: data-ingestion-agent.md  pyproject.toml
ai-agent/data-ingestion-agent/scripts/: run_full_crawl.py
ai-agent/data-ingestion-agent/src/data_ingestion_agent/: workflow.py
ai-agent/data-ingestion-agent/tests/integration/: test_fixture_safety.py  test_workflow_cli.py
ai-agent/data-ingestion-agent/tests/unit/: test_confluence_client.py  test_html_extraction.py  test_processed_document_pipeline.py  test_schema_config.py
ai-agent/history-manager-agent/: .env.example  pyproject.toml
ai-agent/history-manager-agent/scripts/: run_history_manager.py
ai-agent/history-manager-agent/src/history_manager_agent/: __init__.py  workflow.py
ai-agent/history-manager-agent/tests/integration/: test_fixture_safety.py  test_workflow_cli.py
ai-agent/history-manager-agent/tests/unit/: test_context_policy.py  test_contextualized_question.py  test_history_input_normalization.py  test_llm_provider_classification.py  test_schema_config.py
(+535 files in other folders)
