# 작성자 : 이영훈
# 담당 영역 : ai-agent
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "answer-verification-agent"
version = "0.1.0"
description = "Answer Verification Agent MVP"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
