# 작성자 : 이영훈
# 담당 영역 : ai-agent
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "data-ingestion-agent"
version = "0.1.0"
description = "LINA Data Ingestion Agent MVP"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
langgraph = ["langgraph>=0.2,<0.3"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
