[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "history-manager-agent"
version = "0.1.0"
description = "LINA History Manager Agent MVP"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
langgraph = ["langgraph>=0.2,<0.3"]
openai = ["openai>=1.30"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
